--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-image-markup",
-  "version": "3.2.0",
+  "version": "3.3.0",
   "description": "vue-image-markup will provide you to edit uploaded image easily and save it.",
   "main": "src/Editor.vue",
   "repository": {
@@ -41,8 +41,7 @@
       "parser": "babel-eslint"
     }
   },
-  "authors": [
-    {
+  "authors": [{
       "name": "Lionix Team",
       "email": "packages@lionix-team.com"
     },
